backend/k8s/mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: autosnipe-mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: autosnipe-mongodb
  template:
    metadata:
      labels:
        app: autosnipe-mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:latest
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-storage
              mountPath: /data/db
      volumes:
        - name: mongo-storage
          persistentVolumeClaim:
            claimName: mongo-pvc
