backend/k8s/nestjs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: autosnipe-service
spec:
  selector:
    app: autosnipe
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
